test/AnalyseurDTD/dtd.output
Grammar

    0 $accept: main $end

    1 main: dtd_list_opt

    2 dtd_list_opt: dtd_list_opt ATTLIST IDENT att_definition_opt CLOSE
    3             | dtd_list_opt ELEMENT IDENT contentspec CLOSE
    4             | /* empty */

    5 att_definition_opt: att_definition_opt attribute
    6                   | /* empty */

    7 attribute: IDENT att_type default_declaration

    8 att_type: CDATA
    9         | TOKENTYPE
   10         | enumerate

   11 enumerate: OPENPAR enum_list_plus CLOSEPAR

   12 enum_list_plus: enum_list PIPE item_enum

   13 enum_list: item_enum
   14          | enum_list PIPE item_enum

   15 item_enum: IDENT

   16 default_declaration: DECLARATION
   17                    | STRING
   18                    | FIXED STRING

   19 contentspec: EMPTY
   20            | ANY
   21            | children
   22            | mixed

   23 card_opt: QMARK
   24         | AST
   25         | PLUS
   26         | /* empty */

   27 children: choice card_opt
   28         | seq card_opt

   29 cp: children
   30   | IDENT card_opt

   31 choice: OPENPAR cp list_choice CLOSEPAR

   32 list_choice: list_choice PIPE cp
   33            | PIPE cp

   34 seq: OPENPAR cp list_seq_opt CLOSEPAR

   35 list_seq_opt: list_seq_opt COMMA cp
   36             | /* empty */

   37 mixed: OPENPAR PCDATA list_mixed CLOSEPAR AST
   38      | OPENPAR PCDATA CLOSEPAR ast_opt

   39 ast_opt: AST
   40        | /* empty */

   41 list_mixed: list_mixed PIPE IDENT
   42           | PIPE IDENT


Terminals, with rules where they appear

$end (0) 0
error (256)
ELEMENT (258) 3
ATTLIST (259) 2
CLOSE (260) 2 3
OPENPAR (261) 11 31 34 37 38
CLOSEPAR (262) 11 31 34 37 38
COMMA (263) 35
PIPE (264) 12 14 32 33 41 42
FIXED (265) 18
EMPTY (266) 19
ANY (267) 20
PCDATA (268) 37 38
AST (269) 24 37 39
QMARK (270) 23
PLUS (271) 25
CDATA (272) 8
IDENT (273) 2 3 7 15 30 41 42
TOKENTYPE (274) 9
DECLARATION (275) 16
STRING (276) 17 18


Nonterminals, with rules where they appear

$accept (22)
    on left: 0
main (23)
    on left: 1, on right: 0
dtd_list_opt (24)
    on left: 2 3 4, on right: 1 2 3
att_definition_opt (25)
    on left: 5 6, on right: 2 5
attribute (26)
    on left: 7, on right: 5
att_type (27)
    on left: 8 9 10, on right: 7
enumerate (28)
    on left: 11, on right: 10
enum_list_plus (29)
    on left: 12, on right: 11
enum_list (30)
    on left: 13 14, on right: 12 14
item_enum (31)
    on left: 15, on right: 12 13 14
default_declaration (32)
    on left: 16 17 18, on right: 7
contentspec (33)
    on left: 19 20 21 22, on right: 3
card_opt (34)
    on left: 23 24 25 26, on right: 27 28 30
children (35)
    on left: 27 28, on right: 21 29
cp (36)
    on left: 29 30, on right: 31 32 33 34 35
choice (37)
    on left: 31, on right: 27
list_choice (38)
    on left: 32 33, on right: 31 32
seq (39)
    on left: 34, on right: 28
list_seq_opt (40)
    on left: 35 36, on right: 34 35
mixed (41)
    on left: 37 38, on right: 22
ast_opt (42)
    on left: 39 40, on right: 38
list_mixed (43)
    on left: 41 42, on right: 37 41


state 0

    0 $accept: . main $end

    $default  reduce using rule 4 (dtd_list_opt)

    main          go to state 1
    dtd_list_opt  go to state 2


state 1

    0 $accept: main . $end

    $end  shift, and go to state 3


state 2

    1 main: dtd_list_opt .
    2 dtd_list_opt: dtd_list_opt . ATTLIST IDENT att_definition_opt CLOSE
    3             | dtd_list_opt . ELEMENT IDENT contentspec CLOSE

    ELEMENT  shift, and go to state 4
    ATTLIST  shift, and go to state 5

    $default  reduce using rule 1 (main)


state 3

    0 $accept: main $end .

    $default  accept


state 4

    3 dtd_list_opt: dtd_list_opt ELEMENT . IDENT contentspec CLOSE

    IDENT  shift, and go to state 6


state 5

    2 dtd_list_opt: dtd_list_opt ATTLIST . IDENT att_definition_opt CLOSE

    IDENT  shift, and go to state 7


state 6

    3 dtd_list_opt: dtd_list_opt ELEMENT IDENT . contentspec CLOSE

    OPENPAR  shift, and go to state 8
    EMPTY    shift, and go to state 9
    ANY      shift, and go to state 10

    contentspec  go to state 11
    children     go to state 12
    choice       go to state 13
    seq          go to state 14
    mixed        go to state 15


state 7

    2 dtd_list_opt: dtd_list_opt ATTLIST IDENT . att_definition_opt CLOSE

    $default  reduce using rule 6 (att_definition_opt)

    att_definition_opt  go to state 16


state 8

   31 choice: OPENPAR . cp list_choice CLOSEPAR
   34 seq: OPENPAR . cp list_seq_opt CLOSEPAR
   37 mixed: OPENPAR . PCDATA list_mixed CLOSEPAR AST
   38      | OPENPAR . PCDATA CLOSEPAR ast_opt

    OPENPAR  shift, and go to state 17
    PCDATA   shift, and go to state 18
    IDENT    shift, and go to state 19

    children  go to state 20
    cp        go to state 21
    choice    go to state 13
    seq       go to state 14


state 9

   19 contentspec: EMPTY .

    $default  reduce using rule 19 (contentspec)


state 10

   20 contentspec: ANY .

    $default  reduce using rule 20 (contentspec)


state 11

    3 dtd_list_opt: dtd_list_opt ELEMENT IDENT contentspec . CLOSE

    CLOSE  shift, and go to state 22


state 12

   21 contentspec: children .

    $default  reduce using rule 21 (contentspec)


state 13

   27 children: choice . card_opt

    AST    shift, and go to state 23
    QMARK  shift, and go to state 24
    PLUS   shift, and go to state 25

    $default  reduce using rule 26 (card_opt)

    card_opt  go to state 26


state 14

   28 children: seq . card_opt

    AST    shift, and go to state 23
    QMARK  shift, and go to state 24
    PLUS   shift, and go to state 25

    $default  reduce using rule 26 (card_opt)

    card_opt  go to state 27


state 15

   22 contentspec: mixed .

    $default  reduce using rule 22 (contentspec)


state 16

    2 dtd_list_opt: dtd_list_opt ATTLIST IDENT att_definition_opt . CLOSE
    5 att_definition_opt: att_definition_opt . attribute

    CLOSE  shift, and go to state 28
    IDENT  shift, and go to state 29

    attribute  go to state 30


state 17

   31 choice: OPENPAR . cp list_choice CLOSEPAR
   34 seq: OPENPAR . cp list_seq_opt CLOSEPAR

    OPENPAR  shift, and go to state 17
    IDENT    shift, and go to state 19

    children  go to state 20
    cp        go to state 21
    choice    go to state 13
    seq       go to state 14


state 18

   37 mixed: OPENPAR PCDATA . list_mixed CLOSEPAR AST
   38      | OPENPAR PCDATA . CLOSEPAR ast_opt

    CLOSEPAR  shift, and go to state 31
    PIPE      shift, and go to state 32

    list_mixed  go to state 33


state 19

   30 cp: IDENT . card_opt

    AST    shift, and go to state 23
    QMARK  shift, and go to state 24
    PLUS   shift, and go to state 25

    $default  reduce using rule 26 (card_opt)

    card_opt  go to state 34


state 20

   29 cp: children .

    $default  reduce using rule 29 (cp)


state 21

   31 choice: OPENPAR cp . list_choice CLOSEPAR
   34 seq: OPENPAR cp . list_seq_opt CLOSEPAR

    PIPE  shift, and go to state 35

    $default  reduce using rule 36 (list_seq_opt)

    list_choice   go to state 36
    list_seq_opt  go to state 37


state 22

    3 dtd_list_opt: dtd_list_opt ELEMENT IDENT contentspec CLOSE .

    $default  reduce using rule 3 (dtd_list_opt)


state 23

   24 card_opt: AST .

    $default  reduce using rule 24 (card_opt)


state 24

   23 card_opt: QMARK .

    $default  reduce using rule 23 (card_opt)


state 25

   25 card_opt: PLUS .

    $default  reduce using rule 25 (card_opt)


state 26

   27 children: choice card_opt .

    $default  reduce using rule 27 (children)


state 27

   28 children: seq card_opt .

    $default  reduce using rule 28 (children)


state 28

    2 dtd_list_opt: dtd_list_opt ATTLIST IDENT att_definition_opt CLOSE .

    $default  reduce using rule 2 (dtd_list_opt)


state 29

    7 attribute: IDENT . att_type default_declaration

    OPENPAR    shift, and go to state 38
    CDATA      shift, and go to state 39
    TOKENTYPE  shift, and go to state 40

    att_type   go to state 41
    enumerate  go to state 42


state 30

    5 att_definition_opt: att_definition_opt attribute .

    $default  reduce using rule 5 (att_definition_opt)


state 31

   38 mixed: OPENPAR PCDATA CLOSEPAR . ast_opt

    AST  shift, and go to state 43

    $default  reduce using rule 40 (ast_opt)

    ast_opt  go to state 44


state 32

   42 list_mixed: PIPE . IDENT

    IDENT  shift, and go to state 45


state 33

   37 mixed: OPENPAR PCDATA list_mixed . CLOSEPAR AST
   41 list_mixed: list_mixed . PIPE IDENT

    CLOSEPAR  shift, and go to state 46
    PIPE      shift, and go to state 47


state 34

   30 cp: IDENT card_opt .

    $default  reduce using rule 30 (cp)


state 35

   33 list_choice: PIPE . cp

    OPENPAR  shift, and go to state 17
    IDENT    shift, and go to state 19

    children  go to state 20
    cp        go to state 48
    choice    go to state 13
    seq       go to state 14


state 36

   31 choice: OPENPAR cp list_choice . CLOSEPAR
   32 list_choice: list_choice . PIPE cp

    CLOSEPAR  shift, and go to state 49
    PIPE      shift, and go to state 50


state 37

   34 seq: OPENPAR cp list_seq_opt . CLOSEPAR
   35 list_seq_opt: list_seq_opt . COMMA cp

    CLOSEPAR  shift, and go to state 51
    COMMA     shift, and go to state 52


state 38

   11 enumerate: OPENPAR . enum_list_plus CLOSEPAR

    IDENT  shift, and go to state 53

    enum_list_plus  go to state 54
    enum_list       go to state 55
    item_enum       go to state 56


state 39

    8 att_type: CDATA .

    $default  reduce using rule 8 (att_type)


state 40

    9 att_type: TOKENTYPE .

    $default  reduce using rule 9 (att_type)


state 41

    7 attribute: IDENT att_type . default_declaration

    FIXED        shift, and go to state 57
    DECLARATION  shift, and go to state 58
    STRING       shift, and go to state 59

    default_declaration  go to state 60


state 42

   10 att_type: enumerate .

    $default  reduce using rule 10 (att_type)


state 43

   39 ast_opt: AST .

    $default  reduce using rule 39 (ast_opt)


state 44

   38 mixed: OPENPAR PCDATA CLOSEPAR ast_opt .

    $default  reduce using rule 38 (mixed)


state 45

   42 list_mixed: PIPE IDENT .

    $default  reduce using rule 42 (list_mixed)


state 46

   37 mixed: OPENPAR PCDATA list_mixed CLOSEPAR . AST

    AST  shift, and go to state 61


state 47

   41 list_mixed: list_mixed PIPE . IDENT

    IDENT  shift, and go to state 62


state 48

   33 list_choice: PIPE cp .

    $default  reduce using rule 33 (list_choice)


state 49

   31 choice: OPENPAR cp list_choice CLOSEPAR .

    $default  reduce using rule 31 (choice)


state 50

   32 list_choice: list_choice PIPE . cp

    OPENPAR  shift, and go to state 17
    IDENT    shift, and go to state 19

    children  go to state 20
    cp        go to state 63
    choice    go to state 13
    seq       go to state 14


state 51

   34 seq: OPENPAR cp list_seq_opt CLOSEPAR .

    $default  reduce using rule 34 (seq)


state 52

   35 list_seq_opt: list_seq_opt COMMA . cp

    OPENPAR  shift, and go to state 17
    IDENT    shift, and go to state 19

    children  go to state 20
    cp        go to state 64
    choice    go to state 13
    seq       go to state 14


state 53

   15 item_enum: IDENT .

    $default  reduce using rule 15 (item_enum)


state 54

   11 enumerate: OPENPAR enum_list_plus . CLOSEPAR

    CLOSEPAR  shift, and go to state 65


state 55

   12 enum_list_plus: enum_list . PIPE item_enum
   14 enum_list: enum_list . PIPE item_enum

    PIPE  shift, and go to state 66


state 56

   13 enum_list: item_enum .

    $default  reduce using rule 13 (enum_list)


state 57

   18 default_declaration: FIXED . STRING

    STRING  shift, and go to state 67


state 58

   16 default_declaration: DECLARATION .

    $default  reduce using rule 16 (default_declaration)


state 59

   17 default_declaration: STRING .

    $default  reduce using rule 17 (default_declaration)


state 60

    7 attribute: IDENT att_type default_declaration .

    $default  reduce using rule 7 (attribute)


state 61

   37 mixed: OPENPAR PCDATA list_mixed CLOSEPAR AST .

    $default  reduce using rule 37 (mixed)


state 62

   41 list_mixed: list_mixed PIPE IDENT .

    $default  reduce using rule 41 (list_mixed)


state 63

   32 list_choice: list_choice PIPE cp .

    $default  reduce using rule 32 (list_choice)


state 64

   35 list_seq_opt: list_seq_opt COMMA cp .

    $default  reduce using rule 35 (list_seq_opt)


state 65

   11 enumerate: OPENPAR enum_list_plus CLOSEPAR .

    $default  reduce using rule 11 (enumerate)


state 66

   12 enum_list_plus: enum_list PIPE . item_enum
   14 enum_list: enum_list PIPE . item_enum

    IDENT  shift, and go to state 53

    item_enum  go to state 68


state 67

   18 default_declaration: FIXED STRING .

    $default  reduce using rule 18 (default_declaration)


state 68

   12 enum_list_plus: enum_list PIPE item_enum .
   14 enum_list: enum_list PIPE item_enum .

    PIPE      reduce using rule 14 (enum_list)
    $default  reduce using rule 12 (enum_list_plus)
